# intelligence-system

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  bootstrap.py  config.py  database.py  inventory.db-shm  inventory.db-wal  main.py  pyproject.toml  render.yaml  requirements.txt  response_health.json  response_ml_predict.json  run.sh
.github/workflows/: ci.yml
api/: alerts.py  dashboard.py  ml.py  search.py  whatsapp.py
app/: config.py  database.py  dependencies.py  main.py
app/api/: alerts.py  dashboard.py  ml.py  (+2 more)
datasource/: alert_report_input_50.json  daily_update_template.xlsx
docker/: docker-compose.yml
intelligence/: aging_rules.py  danger_rules.py  decision_engine.py  demand_rules.py
logs/: server.err  server.out
ml/: __init__.py  predict.py
models/: daily_snapshot.py  delivery_logs.py  inventory.py  lifecycle.py  product.py  sales.py  stores.py
scheduler/: nightly_job.py
scripts/: generate_daily_alert_report.py  import_excel.py  retrain_model.py  run_alerts_manual.ps1  run_excel_import.ps1  run_scheduler.py  seed_data.py  start_server.ps1  stop_server.ps1
services/: __init__.py  alert_engine.py  excel_importer.py  excel_watch.py  whatsapp_service.py
tests/: conftest.py  test_aging_rules.py  test_alerts.py  test_alerts_router.py  test_danger_rules.py  test_decision_engine.py  test_ingestion.py  test_ml.py  test_ml_training.py  test_notification_service.py  test_predict_risk.py  test_report_service.py  test_scheduler.py  test_schema_validation.py  test_telegram_service.py  test_whatsapp_service.py  test_whatsapp_webhook.py
(+68 files in other folders)
